8.0.2/users_guide/flags-packages.gen.rst
.. This file is generated by utils/mkUserGuidePart

+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| Flag                                               | Description                                                                                          | Static/Dynamic                 | Reverse                                            |
+====================================================+======================================================================================================+================================+====================================================+
| :ghc-flag:`-this-unit-id⟨P⟩`                       | Compile to be part of unit (i.e. package) ⟨P⟩                                                        | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-package⟨P⟩`                            | Expose package ⟨P⟩                                                                                   | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-hide-all-packages`                     | Hide all packages by default                                                                         | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-hide-package⟨name⟩`                    | Hide package ⟨P⟩                                                                                     | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-ignore-package⟨name⟩`                  | Ignore package ⟨P⟩                                                                                   | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-package-db⟨file⟩`                      | Add ⟨file⟩ to the package db stack.                                                                  | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-clear-package-db`                      | Clear the package db stack.                                                                          | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-no-global-package-db`                  | Remove the global package db from the stack.                                                         | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-global-package-db`                     | Add the global package db to the stack.                                                              | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-no-user-package-db`                    | Remove the user's package db from the stack.                                                         | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-user-package-db`                       | Add the user's package db to the stack.                                                              | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-no-auto-link-packages`                 | Don't automatically link in the base and rts packages.                                               | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-trust⟨P⟩`                              | Expose package ⟨P⟩ and set it to be trusted                                                          | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-distrust⟨P⟩`                           | Expose package ⟨P⟩ and set it to be distrusted                                                       | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-distrust-all`                          | Distrust all packages by default                                                                     | dynamic/``:set``               |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+

